--- a/src/css/TriveeeaID.css
+++ b/src/css/TriveeeaID.css
@@ -60,6 +60,12 @@
   .tinput-container input[type="ttext"]{
   width: 90%;
   margin-left: 15%;
+  
+    padding: 0.5rem 0.5rem;
+    outline: none;
+    border: none;
+    border-radius: 0.25rem;
+    font-size: 1rem;
   }
   
   
